# queens

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: config.py  game.py  main.py
src/game_store/: game_001.json
src/generate/: generate_n_queens.py
src/generator/: generate_color_zones.py  generate_n_queens.py
