[tool.poetry]
name = "queens"
version = "0.1.0"
description = ""
authors = ["wenqinglim <lim_wenq@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"
numpy = "^2.2.3"
ortools = "^9.12.4544"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
